# streamly-fsevents

./: .hlint.yaml  .packcheck.ignore  Changelog.md  README.md  appveyor.yml  cabal.project  configure  configure.ac  stack.yaml  streamly-fsevents.cabal
.github/workflows/: haskell.yml
src/Streamly/FileSystem/: Event.hs
src/Streamly/Internal/FS/: Event.hs
src/Streamly/Internal/FS/Event/: Darwin.c  Darwin.hs  Linux.hs  Windows.hs
src/Streamly/Internal/FileSystem/Event/: Darwin.c  Darwin.hs  Linux.hs  Windows.hs
test/Streamly/Test/FileSystem/: Event.hs
test/Streamly/Test/FileSystem/Event/: Common.hs  Darwin.hs  Linux.hs  Windows.hs
